corrected tableHeading overflow

--- a/src/styles/_kyc.scss
+++ b/src/styles/_kyc.scss
@@ -46,7 +46,7 @@
 				.tableHeading {
 					background-color: $primaryColor !important;
 					width: 100%;
-					min-width: 510px;
+					// min-width: 510px;
 					overflow-x: scroll;
 				}
 			}
